Added switching questions, fixed label